--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <div class="container">
         <h1 class="text-center m-4">JSON to CSV</h1>
         <form>
+            <input type="file" class="form-control-file mb-2" name="file" id="file">
             <div class="form-row mb-2">
                 <div class="form-group col-sm-6">
                     <label for="input">JSON</label>
-                    <textarea class="form-control" name="input" id="input" rows="10"></textarea>
+                    <textarea class="form-control mb-2" name="input" id="input" rows="10"></textarea>
+                    <button type="submit" class="btn btn-primary">Convert</button>
+                    <button type="reset" class="btn btn-secondary">Clear</button>
                 </div>
                 <div class="form-group col-sm-6">
                     <label for="output">CSV</label>
-                    <textarea class="form-control" name="output" id="output" rows="10" readonly></textarea>
+                    <textarea class="form-control mb-2" name="output" id="output" rows="10" readonly></textarea>
+                    <button type="button" class="btn btn-primary" id="save" disabled>Save</button>
                 </div>
             </div>
             <div class="alert alert-warning" role="alert">
                 A simple warning alert—check it out!
             </div>
-            <button type="submit" class="btn btn-primary">Convert</button>
-            <button type="reset" class="btn btn-secondary">Clear</button>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
